docs/tests/parser/control_flow/valid/WhileBasic.src
fn void test() {
    while (true) {
    }
}
