docs/tests/parser/control_flow/invalid/DoWhileMissingWhile.src
fn void test() {
    do {
    } (true);
}
